results/91d7dd89065348200920097f18a11e76/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 91d7dd89065348200920097f18a11e76, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
